Fixing some warnings in the build