@@ -14,6 +14,7 @@ import io.undertow.util.PathTemplateMatcher;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
@@ -119,7 +120,7 @@ public class Handler {
 	private static void addSourceChain(PathChain sourceChain) {
 		try {
 			Class sourceClass = Class.forName(sourceChain.getSource());
-			EndpointSource source = (EndpointSource)sourceClass.newInstance();
+			EndpointSource source = (EndpointSource)(sourceClass.getDeclaredConstructor().newInstance());
 			for (EndpointSource.Endpoint endpoint : source.listEndpoints()) {
 				PathChain sourcedPath = new PathChain();
 				sourcedPath.setPath(endpoint.getPath());
@@ -361,8 +362,8 @@ public class Handler {
 		// create an instance of the handler
 		Object handlerOrProviderObject = null;
 		try {
-			handlerOrProviderObject = namedClass.second.newInstance();
-		} catch (InstantiationException | IllegalAccessException e) {
+			handlerOrProviderObject = namedClass.second.getDeclaredConstructor().newInstance();
+		} catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
 			throw new RuntimeException("Could not instantiate handler class: " + namedClass.second);
 		}
 
